in-progress tasks:    # Install Image Carousel for Company Profile Pics.    # Add company gallery pic admin. fixed issue:    # align the header text to the left in company benefits.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1655,6 +1655,13 @@ blockquote {
     flex-basis: 50%;
 }
 
+.galleryUpload {
+    border: 1px solid rgba(51, 54, 58, 0.2) !important;
+    line-height: 90px;
+    text-align: center;
+    color: #444;
+}
+
 
 /* Media */
 
